k8s/argocd/argocd-repo-server.sops-gpg-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      volumes:
        - name: gnupg
          emptyDir: {}
        - name: sops-gpg
          secret:
            secretName: sops-gpg
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: gnupg
              mountPath: /home/argocd/.gnupg
